<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    android:theme="@style/TemaMisLugares"
    tools:context=".activity_main">

    <TextView style="@style/TemaMisLugares.EstiloTexto" android:text="@string/app_name"/>
    <Button android:id="@+id/Button01" style="@style/TemaMisLugares.EstiloTexto.Botones" android:text="@string/opcion1" />
    <Button android:id="@+id/Button02" style="@style/TemaMisLugares.EstiloTexto.Botones" android:text="@string/opcion2" />
    <Button android:id="@+id/Button03" style="@style/TemaMisLugares.EstiloTexto.Botones" android:text="@string/opcion3" />
    <Button android:id="@+id/Button04" style="@style/TemaMisLugares.EstiloTexto.Botones" android:text="@string/opcion4" />

</LinearLayout>